# rc-scripts

./: .cvsignore  AUTHORS  ChangeLog  DEVELOPMENT  INSTALL  Makefile  Makefile.am  NEWS  README  TODO  autogen.sh  backtick-test.sh  changelog.sh  configure.ac  configure.in  dumb.sh  firmware-loader.sh  hwprofile  inittab  inputrc  lang.csh  lang.sh  makepot.pl  modules  modules.preudev  radvd.init  rc-scripts-sysconfig_masq.patch  rc-scripts.spec  rc-scripts.spec.in  run-parts  service  setsysfont  sysconfig.txt  sysctl.conf  tunnels-ip6.init
doc/: Makefile.am  ipcalc.1  ipchains-setup.txt  net-scripts.txt  polski.dsl  rc-scripts.docb  sysconfig.docb  sysconfig.txt  sysvinitfiles  upstart.txt
doc-devel/: ogolnie
init/: Makefile.am  allowlogin.conf  cpusets.conf  local.conf  modules.conf  (+6 more)
lib/: Makefile.am  functions  functions.network  ifdown-br  ifdown-ppp  ifdown-vlan  ifup  ifup-aliases  ifup-ipx  ifup-iucv  ifup-post  ifup-ppp  ifup-routes  ifup-vlan
man/: Makefile.am  run-parts.8  usernetctl.8
man/de/: Makefile.am
ppp/: Makefile.am  auth-down  auth-up  ip-down  ip-up  ipx-down  ipx-up
ppp/ip-down.d/: logger
ppp/ip-up.d/: logger
rc.d/init.d/: <template>.init  Makefile.am  allowlogin  cpusets  cryptsetup  functions  functions-ip6  functions.network  halt  ipchains  killall  local  netfs  network  network-ip6.init  nfsfs  random  reboot  shutdwn  single  sys-chroots  template.init  timezone  tunnels-ip6.init
src/: .cvsignore  Makefile  Makefile.am  config.h.in  initlog.c  ipcalc.1  ipcalc.c  netreport.c  pci-config.c  ppp-watch.c  process.c  process.h  run-parts.c  setuidgid.c  shvar.c  shvar.h  start-stop-daemon.c  testdinit  usernetctl.c  usleep.c
sysconfig/: Makefile.am  clock  hwprof  i18n  init-colors  ip-rules  ipchains  network  network-ip6  network-ip6.conf  static-arp  static-nat  static-routes  system  timezone  tunnels-ip6.conf
sysconfig/cpusets/: Makefile.am  cpuset-test
sysconfig/hwprofiles/: Makefile.am  files
sysconfig/interfaces/: Makefile.am  ifcfg-atm0  ifcfg-atm1  ifcfg-bond0  ifcfg-br0  ifcfg-description  ifcfg-eth0  ifcfg-eth0.1  ifcfg-eth0.wiget  ifcfg-irda0  ifcfg-irlan0  ifcfg-kou  ifcfg-lec0  ifcfg-lo  ifcfg-ppp0.callback  ifcfg-ppp0.eagle-usb-neostrada  ifcfg-ppp0.gprs-idea  ifcfg-ppp0.gprs-playmobile  ifcfg-ppp0.gprs-plusgsm  ifcfg-ppp0.kou  ifcfg-ppp0.leased1  ifcfg-ppp0.leased2  ifcfg-ppp0.speedtouch-neostrada  ifcfg-ppp0.tpsa  ifcfg-ppp0.ueagle-neostrada  ifcfg-sl0  tnlcfg-description  tnlcfg-icm
sysconfig/interfaces/data/: Makefile.am  chat-kou  chat-ppp0.callback  chat-ppp0.gprs-playmobile  chat-ppp0.gprs-plusgsm  chat-ppp0.leased1  chat-ppp0.tpsa
sysconfig/interfaces/down.d/all/: Makefile.am  thetouch
sysconfig/interfaces/down.d/ppp/: logger
sysconfig/interfaces/up.d/all/: Makefile.am  thetouch
sysconfig/interfaces/up.d/ipx/: Makefile.am
sysconfig/interfaces/up.d/ppp/: Makefile.am  logger
sysconfig/network-scripts/: Makefile.am  bonddown  bondup  chat-ppp0  chat-ppp0.leased1  functions.network  ifcfg-eth0  ifcfg-eth0.wiget  ifcfg-ppp0  ifcfg-ppp0.callback  ifcfg-ppp0.leased1  ifcfg-ppp0.leased2  ifcfg-ppp0.tpsa  ifdown  ifdown-atm  ifdown-br  ifdown-irda  ifdown-lec  ifdown-post  ifdown-ppp  ifdown-sl  ifdown-vlan  ifup  ifup-aliases  ifup-atm  ifup-br  ifup-ipx  ifup-irda  ifup-iucv  ifup-lec  ifup-neigh  ifup-plip  ifup-plusb  ifup-post  ifup-ppp  ifup-routes  ifup-sl  ifup-tnl  ifup-vlan  network-functions  (+2 more)
trunk/: AUTHORS  ChangeLog  DEVELOPMENT  INSTALL  Makefile.am  NEWS  README  TODO  acinclude.m4  autogen.sh  configure.ac  crypttab  dumb.sh  hwprofile  inittab  lang.csh  lang.sh  make-tag.sh  makepot.pl  modules  run-parts  service  setsysfont  sysctl.conf
trunk/doc/: Makefile.am  make-html  net-scripts.txt  polski.dsl  sysvinitfiles  upstart.txt
trunk/init/: allowlogin.conf  cryptsetup.conf  random.conf  rcS-sulogin.conf  sys-chroots.conf
trunk/isapnp/: .cvsignore  isapnp-kernel.conf
trunk/lib/: functions.network  ifdown  ifdown-irda  ifdown-post  ifdown-sl  ifup-br  ifup-irda  ifup-plip  ifup-plusb  ifup-sl  tnldown  tnlup
trunk/man/: start-stop-daemon.8  usleep.1
trunk/man/es/: Makefile.am
trunk/man/fr/: Makefile.am
trunk/man/ja/: Makefile.am
trunk/man/ru/: Makefile.am
trunk/man/sv/: Makefile.am
trunk/po/: Makefile.am  de.po  pl.po
trunk/ppp/: Makefile.am  auth-down  auth-up  ip-down  ip-up
trunk/ppp/ip-down.d/: Makefile.am  logger
trunk/ppp/ip-up.d/: Makefile.am  logger
trunk/rc.d/: Makefile.am  rc.init  rc.local  rc.modules  rc.shutdown  rc.sysinit
trunk/rc.d/init.d/: allowlogin  cpusets  cryptsetup  killall  local  random  sys-chroots  template.init  timezone
trunk/src/: Makefile.am  ppp-watch.c  resolvesymlink.c  setuidgid.c  testdinit  usleep.c
trunk/sysconfig/: clock  hwprof  i18n  init-colors  init-colors.gentoo  static-routes6  system  timezone
trunk/sysconfig/cpusets/: cpuset-test
trunk/sysconfig/hwprofiles/: Makefile.am
trunk/sysconfig/interfaces/: Makefile.am  ifcfg-description  ifcfg-eth0  ifcfg-irlan0  ifcfg-ppp0.gprs-idea  ifcfg-ppp0.gprs-playmobile  ifcfg-ppp0.pppoe  ifcfg-ppp0.speedtouch-neostrada  ifcfg-ppp0.tpsa  ifcfg-ppp0.ueagle4-neostrada  tnlcfg-description
trunk/sysconfig/interfaces/data/: Makefile.am  chat-ppp0.callback  chat-ppp0.gprs-idea  chat-ppp0.gprs-plusgsm  chat-ppp0.kou  chat-ppp0.kou-disconnect  chat-ppp0.leased1  chat-ppp0.tpsa
trunk/sysconfig/interfaces/down.d/: Makefile.am
trunk/sysconfig/interfaces/down.d/all/: thetouch
trunk/sysconfig/interfaces/down.d/ip/: Makefile.am
trunk/sysconfig/interfaces/down.d/ipx/: Makefile.am
trunk/sysconfig/interfaces/down.d/ppp/: Makefile.am
trunk/sysconfig/interfaces/down.d/tnl/: Makefile.am
trunk/sysconfig/interfaces/up.d/: Makefile.am
trunk/sysconfig/interfaces/up.d/all/: Makefile.am  thetouch
trunk/sysconfig/interfaces/up.d/ip/: Makefile.am
trunk/sysconfig/interfaces/up.d/tnl/: Makefile.am
trunk/sysconfig/network-scripts/: ifdown  ifdown-br  ifdown-irda  ifup  ifup-br  ifup-ipx  ifup-irda  ifup-plip  ifup-routes  ifup-sl  ifup-vlan
trunk/t/: status-pidfile.sh
(+19 files in other folders)
