dnl $Id: configure.in,v 1.31.2.1 2000/10/18 20:10:45 misiek Exp $
AC_INIT()

PACKAGE=rc-scripts
VERSION=0.4.0
ALL_LINGUAS="pl"

SHSCRIPTS="rc.d/rc 			\
	rc.d/init.d/allowlogin 		\
	rc.d/init.d/functions 		\
	rc.d/init.d/functions.network 	\
	rc.d/init.d/killall 		\
	rc.d/init.d/network 		\
	rc.d/init.d/random 		\
	rc.d/init.d/single 		\
	rc.d/init.d/timezone 		\
	rc.d/rc 			\
	rc.d/rc.init 			\
	rc.d/rc.local 			\
	rc.d/rc.shutdown		\
	rc.d/rc.sysinit			\
	sysconfig/network-scripts/ifdown	\
	sysconfig/network-scripts/ifdown-br	\
	sysconfig/network-scripts/ifdown-post	\
	sysconfig/network-scripts/ifdown-ppp	\
	sysconfig/network-scripts/ifdown-sl	\
	sysconfig/network-scripts/ifup		\
	sysconfig/network-scripts/ifup-aliases	\
	sysconfig/network-scripts/ifup-br	\
	sysconfig/network-scripts/ifup-ipx	\
	sysconfig/network-scripts/ifup-plip	\
	sysconfig/network-scripts/ifup-post	\
	sysconfig/network-scripts/ifup-ppp	\
	sysconfig/network-scripts/ifup-routes	\
	sysconfig/network-scripts/ifup-sl	\
	sysconfig/network-scripts/tnldown	\
	sysconfig/network-scripts/tnlup		\
	"

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)

dnl Checks for programs.
AC_PROG_CC
AC_ISC_POSIX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

pppdir='${sysconfdir}/ppp'
sysconfigdir='${sysconfdir}/sysconfig'
updir='${sysconfigdir}/interfaces/up.d'
downdir='${sysconfigdir}/interfaces/down.d'
networkscriptsdir='${sysconfigdir}/network-scripts'
rcdir='${sysconfdir}/rc.d'
docdir="${prefix}/doc/$PACKAGE-$VERSION"
libdir="${exec_prefix}/lib"

dnl i18n support
AC_PATH_PROGS(MSGMERGE, msgmerge)
AC_PATH_PROGS(GMSGFMT, gmsgfmt msgfmt)

CATALOGS=
POTFILES=
for lang in $ALL_LINGUAS; do
        CATALOGS="$CATALOGS $lang.gmo"
        POTFILES="$POTFILES $lang.po"
done

POTSRC=
for src in $SHSCRIPTS; do
        POTSRC="$POTSRC \$(top_srcdir)/$src"
done
AC_ARG_WITH(localedir,
        [  --with-localedir=PATH      specify where the locale stuff should go ])

if test "x$LOCALEDIR" = "x"; then
        if test "x$with_localedir" != "x"; then
                LOCALEDIR=$with_localedir
        else
                LOCALEDIR='$(prefix)/share/locale'
        fi
fi

localedir=$LOCALEDIR
gnulocaledir=$LOCALEDIR

if test "`eval echo $sysconfdir`" = "NONE/etc"; then
        defaultdir="/usr/local/etc"
else
        defaultdir="`eval echo $sysconfdir`"
fi

dnl Output
AC_SUBST(BASHSCRIPTS)
AC_SUBST(CATALOGS)
AC_SUBST(POTFILES)
AC_SUBST(POTSRC)
AC_SUBST(localedir)
AC_SUBST(gnulocaledir)
			
AC_SUBST(pppdir)
AC_SUBST(networkscriptsdir)
AC_SUBST(sysconfigdir)
AC_SUBST(updir)
AC_SUBST(downdir)
AC_SUBST(rcdir)
AC_SUBST(docdir)
AC_SUBST(libdir)

AC_OUTPUT(Makefile src/Makefile doc/Makefile \
	ppp/Makefile \
	sysconfig/Makefile \
	sysconfig/network-scripts/Makefile \
	sysconfig/interfaces/Makefile \
	sysconfig/interfaces/data/Makefile \
	sysconfig/interfaces/up.d/Makefile \
	sysconfig/interfaces/up.d/all/Makefile \
	sysconfig/interfaces/up.d/ip/Makefile \
	sysconfig/interfaces/up.d/ipx/Makefile \
	sysconfig/interfaces/up.d/ppp/Makefile \
	sysconfig/interfaces/up.d/tnl/Makefile \
	sysconfig/interfaces/down.d/Makefile \
	sysconfig/interfaces/down.d/all/Makefile \
	sysconfig/interfaces/down.d/ip/Makefile \
	sysconfig/interfaces/down.d/ipx/Makefile \
	sysconfig/interfaces/down.d/ppp/Makefile \
	sysconfig/interfaces/down.d/tnl/Makefile \
	rc.d/Makefile rc.d/init.d/Makefile \
	po/Makefile \
	rc-scripts.spec)
