@SET_MAKE@

man_MANS = \
	consoletype.1 \
	doexec.1 \
	genhostid.1 \
	initlog.1 \
	ipcalc.1 \
	netreport.1 \
	ppp-watch.8 \
	usernetctl.8 \
	usleep.1 \
	start-stop-daemon.8

# will overwrite rather putting to subdirs. blah
#	de/start-stop-daemon.8 \
#	es/start-stop-daemon.8 \
#	fr/start-stop-daemon.8 \
#	ja/start-stop-daemon.8 \
#	ru/start-stop-daemon.8 \
#	sv/start-stop-daemon.8

EXTRA_DIST = $(man_MANS)
