@SET_MAKE@

SUBDIRS = data up.d down.d

interfacesdir = @sysconfigdir@/interfaces

interfaces_DATA = \
	ifcfg-atm0 \
	ifcfg-atm1 \
	ifcfg-br0 \
	ifcfg-description \
	ifcfg-eth0 \
	ifcfg-eth0.1 \
	ifcfg-irda0 \
	ifcfg-irlan0 \
	ifcfg-lec0 \
	ifcfg-ppp0.callback \
	ifcfg-ppp0.leased1 \
	ifcfg-ppp0.leased2 \
	ifcfg-ppp0.tpsa \
	ifcfg-sl0 \
	tnlcfg-description \
	tnlcfg-icm

EXTRA_DIST = $(interfaces_DATA)
